--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "backend for a video streaming app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Pranav-Malao/Prime-Call/issues"
   },
-  "homepage": "https://github.com/Pranav-Malao/Prime-Call#readme"
+  "homepage": "https://github.com/Pranav-Malao/Prime-Call#readme",
+  "dependencies": {
+    "socket.io": "^4.8.1"
+  }
 }
